--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -23,19 +24,35 @@
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <TextField layoutX="441.0" layoutY="235.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
-      <PasswordField layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
-      <Button layoutX="441.0" layoutY="395.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Cadastrar" textFill="WHITE">
+      <TextField fx:id="NomeCadastro" focusTraversable="false" layoutX="441.0" layoutY="235.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
+      <PasswordField fx:id="SenhaCadastro" focusTraversable="false" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
+      <Button fx:id="cadastrar" layoutX="441.0" layoutY="395.0" mnemonicParsing="false" onAction="#onCadastrarClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Cadastrar" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Button fx:id="levarTelaLogin" layoutX="441.0" layoutY="445.0" mnemonicParsing="false" onAction="#onLevarTelaLoginClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Clique aqui para logar" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <TextField layoutX="441.0" layoutY="275.0" prefHeight="25.0" prefWidth="215.0" promptText="Login" />
-      <TextField layoutX="441.0" layoutY="315.0" prefHeight="25.0" prefWidth="215.0" promptText="Tipo (1 = Administrador e 2 = Cliente)" />
+      <TextField fx:id="LoginCadastro" layoutX="441.0" layoutY="275.0" prefHeight="25.0" prefWidth="215.0" promptText="Login" />
+      <TextField fx:id="TipoCadastro" layoutX="441.0" layoutY="315.0" prefHeight="25.0" prefWidth="215.0" promptText="Tipo (1 = Administrador e 2 = Cliente)" />
+      <Label fx:id="ExcecaoVazio" layoutX="416.0" layoutY="495.0" prefHeight="35.0" prefWidth="265.0" textAlignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="ExcecaoVazio2" layoutX="365.0" layoutY="495.0" prefHeight="35.0" prefWidth="405.0" textAlignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
