--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-de-login.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-de-login.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.bibliolinda.gui.TelaLoginController">
    <children>
@@ -24,17 +24,23 @@
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Button layoutX="441.0" layoutY="340.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Entrar" textFill="WHITE">
+      <Button fx:id="EntrarLogin" layoutX="441.0" layoutY="340.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Entrar" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <Button fx:id="levarTelaCadastro" layoutX="441.0" layoutY="388.0" mnemonicParsing="false" onAction="#onLevarTelaCadastroClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Clique aqui para logar" textFill="WHITE">
+      <Button fx:id="levarTelaCadastro" layoutX="441.0" layoutY="388.0" mnemonicParsing="false" onAction="#onLevarTelaCadastroClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Não tem conta?" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
-      <TextField layoutX="441.0" layoutY="256.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
-      <PasswordField layoutX="441.0" layoutY="296.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
+      <TextField fx:id="NomeLogin" focusTraversable="false" layoutX="441.0" layoutY="256.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
+      <PasswordField fx:id="SenhaLogin" layoutX="441.0" layoutY="296.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
    </children>
 </AnchorPane>
