Update da tela de cadastro funcional

--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
@@ -54,10 +54,15 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <ChoiceBox layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0">
+      <ChoiceBox fx:id="TipoCadastro" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </ChoiceBox>
+      <Label fx:id="ExcecaoVazio3" layoutX="446.0" layoutY="495.0" prefHeight="35.0" prefWidth="243.0" textAlignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
