--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -54,15 +54,11 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="TipoCadastro" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </ChoiceBox>
-      <Label fx:id="ExcecaoVazio3" layoutX="446.0" layoutY="495.0" prefHeight="35.0" prefWidth="243.0" textAlignment="CENTER">
+      <Label fx:id="ExcecaoVazio1" layoutX="446.0" layoutY="495.0" prefHeight="35.0" prefWidth="243.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <ComboBox fx:id="TipoCadastro" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0" promptText="Tipo" style="-fx-border-color: #CCCCCC; -fx-background-color: white;" />
    </children>
 </AnchorPane>
