--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-CLIENTE.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-CLIENTE.fxml
@@ -17,7 +17,7 @@
                 </Label>
             </children>
         </AnchorPane>
-      <Button fx:id="BuscarLivros" layoutX="451.0" layoutY="256.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Buscar livros" textFill="WHITE">
+      <Button fx:id="BuscarLivros" layoutX="451.0" layoutY="256.0" mnemonicParsing="false" onAction="#onBuscarLivrosClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Buscar livros" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
