--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-de-login.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-de-login.fxml
@@ -50,5 +50,6 @@
       <Button fx:id="EntrarAdmin" layoutX="325.0" layoutY="561.0" mnemonicParsing="false" onAction="#onEntrarAdminClick" text="EntrarADM" />
       <Button fx:id="EntrarCliente" layoutX="414.0" layoutY="561.0" mnemonicParsing="false" onAction="#onEntrarClienteClick" text="EntrarCLIENTE" />
       <Button fx:id="ListarUsuarios" layoutX="519.0" layoutY="561.0" mnemonicParsing="false" onAction="#onListarUsuariosClick" text="ListarUsuarios" />
+      <Button fx:id="ListarEmprestimos" layoutX="621.0" layoutY="561.0" mnemonicParsing="false" onAction="#onListarEmprestimosClick" text="ListarEmprestimos" />
    </children>
 </AnchorPane>
