--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-ADMIN.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-ADMIN.fxml
@@ -46,5 +46,13 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
+      <Button fx:id="VoltarTelaInicial" layoutX="335.0" layoutY="534.0" mnemonicParsing="false" onAction="#onVoltarTelaInicialClick" prefHeight="35.0" prefWidth="79.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
     </children>
 </AnchorPane>
