--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -21,9 +23,9 @@
             </children></AnchorPane>
         <AnchorPane layoutX="-5.0" layoutY="165.0" prefHeight="436.0" prefWidth="509.0" style="-fx-background-color: white;">
             <children>
-                <AnchorPane layoutX="5.0" prefHeight="436.0" prefWidth="800.0">
+                <AnchorPane layoutX="3.0" prefHeight="436.0" prefWidth="800.0">
                     <children>
-                        <Label layoutX="41.0" layoutY="15.0" text="Buscar Livros">
+                        <Label layoutX="41.0" layoutY="15.0" text="Gerenciar empréstimos">
                             <font>
                                 <Font name="System Bold" size="34.0" />
                             </font>
@@ -33,6 +35,12 @@
                                 <Font size="18.0" />
                             </font>
                         </Label>
+                  <TableView layoutX="45.0" layoutY="77.0" prefHeight="282.0" prefWidth="453.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="C1" />
+                      <TableColumn prefWidth="75.0" text="C2" />
+                    </columns>
+                  </TableView>
                     </children>
                 </AnchorPane>
             </children>
