--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-CLIENTE.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-CLIENTE.fxml
@@ -30,7 +30,7 @@
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Button fx:id="EmprestimosAtivos" layoutX="451.0" layoutY="306.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Empréstimos ativos" textFill="WHITE">
+      <Button fx:id="EmprestimosAtivos" layoutX="451.0" layoutY="306.0" mnemonicParsing="false" onAction="#onEmprestimosAtivosClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Empréstimos ativos" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
@@ -54,7 +54,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button fx:id="ListarEmprestimos" layoutX="666.0" layoutY="21.0" mnemonicParsing="false" onAction="#onListarEmprestimosClick" text="ListarEmprestimos" />
       <Button fx:id="voltarTelaInicioCliente" layoutX="335.0" layoutY="534.0" mnemonicParsing="false" onAction="#onvoltarTelaInicioClienteClick" prefHeight="35.0" prefWidth="79.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
          <font>
             <Font size="16.0" />
