--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/cadastro-view.fxml
@@ -25,8 +25,8 @@
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <TextField fx:id="NomeCadastro" focusTraversable="false" layoutX="441.0" layoutY="235.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
-      <PasswordField fx:id="SenhaCadastro" focusTraversable="false" layoutX="441.0" layoutY="315.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
+      <TextField fx:id="nomeCadastro" focusTraversable="false" layoutX="441.0" layoutY="235.0" prefHeight="25.0" prefWidth="215.0" promptText="Nome" />
+      <PasswordField fx:id="senhaCadastro" focusTraversable="false" layoutX="441.0" layoutY="315.0" prefHeight="25.0" prefWidth="215.0" promptText="Senha" />
       <Button fx:id="cadastrar" layoutX="441.0" layoutY="395.0" mnemonicParsing="false" onAction="#onCadastrarClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Cadastrar" textFill="WHITE">
          <font>
             <Font size="16.0" />
@@ -43,24 +43,24 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <TextField fx:id="LoginCadastro" layoutX="441.0" layoutY="275.0" prefHeight="25.0" prefWidth="215.0" promptText="Login" />
-      <Label fx:id="ExcecaoVazio" layoutX="416.0" layoutY="495.0" prefHeight="35.0" prefWidth="265.0" textAlignment="CENTER">
+      <TextField fx:id="loginCadastro" layoutX="441.0" layoutY="275.0" prefHeight="25.0" prefWidth="215.0" promptText="Login" />
+      <Label fx:id="excecaoVazio" layoutX="416.0" layoutY="495.0" prefHeight="35.0" prefWidth="265.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="ExcecaoVazio2" layoutX="441.0" layoutY="495.0" prefHeight="35.0" prefWidth="215.0" textAlignment="CENTER">
+      <Label fx:id="excecaoVazio2" layoutX="441.0" layoutY="495.0" prefHeight="35.0" prefWidth="215.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="ExcecaoVazio1" layoutX="441.0" layoutY="495.0" prefHeight="35.0" prefWidth="215.0" textAlignment="CENTER">
+      <Label fx:id="excecaoVazio1" layoutX="441.0" layoutY="495.0" prefHeight="35.0" prefWidth="215.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ComboBox fx:id="TipoCadastro" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0" promptText="Tipo" style="-fx-border-color: #CCCCCC; -fx-background-color: white;" />
-      <Label fx:id="ExcecaoVazio3" layoutX="482.0" layoutY="495.0" prefHeight="35.0" prefWidth="133.0" textAlignment="CENTER">
+      <ComboBox fx:id="tipoCadastro" layoutX="441.0" layoutY="355.0" prefHeight="25.0" prefWidth="215.0" promptText="Tipo" style="-fx-border-color: #CCCCCC; -fx-background-color: white;" />
+      <Label fx:id="excecaoVazio3" layoutX="482.0" layoutY="495.0" prefHeight="35.0" prefWidth="133.0" textAlignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
