--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/solicitacao-de-emprestimo.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/solicitacao-de-emprestimo.fxml
@@ -42,12 +42,12 @@
                         <Font name="System Italic" size="25.0" />
                      </font>
                   </Label>
-                  <Label fx:id="LivroSelecionado" layoutX="106.0" layoutY="181.0" prefHeight="36.0" prefWidth="588.0">
+                  <Label fx:id="livroSelecionado" layoutX="106.0" layoutY="181.0" prefHeight="36.0" prefWidth="588.0">
                      <font>
                         <Font name="System Italic" size="25.0" />
                      </font>
                   </Label>
-                  <Button fx:id="VoltarTeladeBusca" layoutX="42.0" layoutY="245.0" mnemonicParsing="false" onAction="#onVoltarTeladeBuscaClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Voltar para Tela de Busca" textFill="WHITE">
+                  <Button fx:id="voltarTeladeBusca" layoutX="42.0" layoutY="245.0" mnemonicParsing="false" onAction="#onVoltarTeladeBuscaClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Voltar para Tela de Busca" textFill="WHITE">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -55,17 +55,17 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label fx:id="LivroJaEmprestado" layoutX="42.0" layoutY="329.0" prefHeight="36.0" prefWidth="537.0">
+                  <Label fx:id="livroJaEmprestado" layoutX="42.0" layoutY="329.0" prefHeight="36.0" prefWidth="537.0">
                      <font>
                         <Font name="System Italic" size="25.0" />
                      </font>
                   </Label>
-                  <Label fx:id="MultasPendentes" layoutX="42.0" layoutY="330.0" prefHeight="35.0" prefWidth="352.0" textAlignment="CENTER">
+                  <Label fx:id="multasPendentes" layoutX="42.0" layoutY="330.0" prefHeight="35.0" prefWidth="352.0" textAlignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="VoltarTelaInicial" layoutX="492.0" layoutY="245.0" mnemonicParsing="false" onAction="#onVoltarTelaInicialClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Voltar para Tela Inicial" textFill="WHITE">
+                  <Button fx:id="voltarTelaInicial" layoutX="492.0" layoutY="245.0" mnemonicParsing="false" onAction="#onVoltarTelaInicialClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Voltar para Tela Inicial" textFill="WHITE">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -73,12 +73,12 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Label fx:id="EmprestimoSolicitado" layoutX="42.0" layoutY="330.0" prefHeight="35.0" prefWidth="283.0" textAlignment="CENTER">
+                  <Label fx:id="emprestimoSolicitado" layoutX="42.0" layoutY="330.0" prefHeight="35.0" prefWidth="283.0" textAlignment="CENTER">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="ConfirmarEmprestimo" layoutX="267.0" layoutY="245.0" mnemonicParsing="false" onAction="#onConfirmarEmprestimoClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Confirmar Empréstimo" textFill="WHITE">
+                  <Button fx:id="confirmarEmprestimo" layoutX="267.0" layoutY="245.0" mnemonicParsing="false" onAction="#onConfirmarEmprestimoClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Confirmar Empréstimo" textFill="WHITE">
                      <font>
                         <Font size="16.0" />
                      </font>
