--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -23,24 +25,31 @@
             </children></AnchorPane>
         <AnchorPane layoutX="-5.0" layoutY="165.0" prefHeight="436.0" prefWidth="509.0" style="-fx-background-color: white;">
             <children>
-                <AnchorPane layoutX="3.0" prefHeight="436.0" prefWidth="800.0">
+                <AnchorPane layoutX="5.0" prefHeight="436.0" prefWidth="800.0">
                     <children>
-                        <Label layoutX="41.0" layoutY="15.0" text="Gerenciar empréstimos">
+                        <Label layoutX="14.0" layoutY="15.0" text="Gerenciar Empréstimos">
                             <font>
                                 <Font name="System Bold" size="34.0" />
                             </font>
                         </Label>
-                        <Label fx:id="ExcecaoNenhumLivroSelecionado" layoutX="153.0" layoutY="395.0" prefHeight="35.0" prefWidth="441.0" textAlignment="CENTER">
+                        <TableView fx:id="emprestimos" layoutX="7.0" layoutY="65.0" prefHeight="308.0" prefWidth="786.0">
+                            <columns>
+                                <TableColumn fx:id="usuarioColumn" prefWidth="96.0" text="Cliente" />
+                                <TableColumn fx:id="livroColumn" prefWidth="131.0" text="Livro" />
+                                <TableColumn fx:id="dataEmprestimoColumn" prefWidth="153.0" text="Data do empréstimo" />
+                                <TableColumn fx:id="dataDevolucaoColumn" prefWidth="173.0" text="Data de devolução" />
+                                <TableColumn fx:id="emprestadoColumn" prefWidth="129.0" text="Empréstimo ativo" />
+                        <TableColumn fx:id="dataLimiteColumn" prefWidth="103.0" text="Data limite" />
+                            </columns>
+                        </TableView>
+                        <Button fx:id="voltarTelaInicialAdmin1" layoutX="25.0" layoutY="391.0" mnemonicParsing="false" onAction="#onvoltarTelaInicialAdmin1Click" prefHeight="31.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="15.0" />
                             </font>
-                        </Label>
-                  <TableView layoutX="45.0" layoutY="77.0" prefHeight="282.0" prefWidth="453.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
                     </children>
                 </AnchorPane>
             </children>
