--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarUsuarios.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarUsuarios.fxml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -23,16 +28,53 @@
             <children>
                 <AnchorPane layoutX="5.0" prefHeight="436.0" prefWidth="800.0">
                     <children>
-                        <Label layoutX="41.0" layoutY="15.0" text="Buscar Livros">
+                        <Label layoutX="14.0" layoutY="15.0" text="Gerenciar Usuários">
                             <font>
                                 <Font name="System Bold" size="34.0" />
                             </font>
                         </Label>
-                        <Label fx:id="ExcecaoNenhumLivroSelecionado" layoutX="153.0" layoutY="395.0" prefHeight="35.0" prefWidth="441.0" textAlignment="CENTER">
+                        <TableView fx:id="tableView" layoutX="7.0" layoutY="65.0" prefHeight="308.0" prefWidth="786.0">
+                            <columns>
+                                <TableColumn fx:id="colNome" prefWidth="211.0" text="Nome" />
+                                <TableColumn fx:id="colLogin" prefWidth="150.0" text="Login" />
+                                <TableColumn fx:id="colSenha" prefWidth="165.0" text="Senha" />
+                                <TableColumn fx:id="colTipo" prefWidth="122.0" text="Tipo" />
+                                <TableColumn fx:id="colId" prefWidth="136.0" text="Id" />
+                            </columns>
+                        </TableView>
+                        <TextField fx:id="usuarioTextField" focusTraversable="false" layoutX="486.0" layoutY="27.0" prefHeight="25.0" prefWidth="215.0" promptText="Buscar por Nome, Autor ou Categoria" />
+                        <Button fx:id="buscarUsuario" layoutX="711.0" layoutY="24.0" mnemonicParsing="false" onAction="#onBuscarDoGerenciarUsuarioClick" prefHeight="25.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Buscar" textFill="WHITE">
                             <font>
-                                <Font size="18.0" />
+                                <Font size="15.0" />
                             </font>
-                        </Label>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
+                        <Button fx:id="voltarTelaInicialAdmin" layoutX="25.0" layoutY="391.0" mnemonicParsing="false" onAction="#onVoltarTelaInicialAdminClick" prefHeight="31.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
+                        <Button fx:id="removerUsuario" layoutX="113.0" layoutY="391.0" mnemonicParsing="false" onAction="#onRemoverUsuarioClick" prefHeight="31.0" prefWidth="141.0" style="-fx-background-color: purple;" text="Remover usuário" textFill="WHITE">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
+                        <Button fx:id="adicionarUsuario" layoutX="265.0" layoutY="391.0" mnemonicParsing="false" onAction="#onadicionarUsuarioClick" prefHeight="31.0" prefWidth="141.0" style="-fx-background-color: purple;" text="Adicionar usuário" textFill="WHITE">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
                     </children>
                 </AnchorPane>
             </children>
