--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-ADMIN.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-principal-ADMIN.fxml
@@ -30,7 +30,7 @@
             <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Button fx:id="gerenciarUsuarios" layoutX="451.0" layoutY="306.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Gerenciar usuários" textFill="WHITE">
+      <Button fx:id="gerenciarUsuarios" layoutX="451.0" layoutY="306.0" mnemonicParsing="false" onAction="#onGerenciarUsuariosClick" prefHeight="35.0" prefWidth="215.0" style="-fx-background-color: purple;" text="Gerenciar usuários" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font>
