--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-CLIENTE-historico-leitura.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-CLIENTE-historico-leitura.fxml
@@ -5,11 +5,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.bibliolinda.gui.TelaHistoricoLeituraClienteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.ufrpe.bibliolinda.gui.TelaCLIENTEHistoricoLeitura">
     <children>
         <AnchorPane layoutX="-12.0" prefHeight="600.0" prefWidth="325.0" style="-fx-background-color: purple;">
             <children>
@@ -28,7 +27,7 @@
             <children>
                 <AnchorPane layoutX="5.0" prefHeight="436.0" prefWidth="800.0">
                     <children>
-                        <Label layoutX="41.0" layoutY="15.0" text="Histórico de leitura">
+                        <Label layoutX="41.0" layoutY="15.0" text="Histórico Leitura">
                             <font>
                                 <Font name="System Bold" size="34.0" />
                             </font>
@@ -38,7 +37,12 @@
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <Button fx:id="voltarTelaInicioCliente" layoutX="14.0" layoutY="378.0" mnemonicParsing="false" onAction="#onvoltarTelaInicioClienteClick" prefHeight="19.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
+                        <TableView fx:id="tableView" layoutX="41.0" layoutY="71.0" prefHeight="246.0" prefWidth="360.0">
+                            <columns>
+                                <TableColumn fx:id="emprestimoColumn" prefWidth="359.0" text="Empréstimo" />
+                            </columns>
+                        </TableView>
+                        <Button fx:id="voltarTelaInicioCliente" layoutX="39.0" layoutY="348.0" mnemonicParsing="false" onAction="#onvoltarTelaInicioClienteClick" prefHeight="35.0" prefWidth="79.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
                             <font>
                                 <Font size="16.0" />
                             </font>
@@ -46,28 +50,8 @@
                                 <Cursor fx:constant="HAND" />
                             </cursor>
                         </Button>
-                      <TableView fx:id="tableView" layoutX="135.0" layoutY="84.0" prefHeight="269.0" prefWidth="503.0">
-                          <columns>
-                              <TableColumn fx:id="tituloColumn" prefWidth="200.0" text="Título">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="titulo" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                              <TableColumn fx:id="autorColumn" prefWidth="150.0" text="Autor">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="autor" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                              <TableColumn fx:id="dataEmprestimoColumn" prefWidth="150.0" text="Data do Empréstimo">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="dataEmprestimo" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                          </columns>
-                      </TableView>
                     </children>
                 </AnchorPane>
-
             </children>
         </AnchorPane>
     </children>
