--- a/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
+++ b/BiblioLinda/src/main/resources/br/ufrpe/bibliolinda/gui/tela-ADMIN-GerenciarEmprestimos.fxml
@@ -27,24 +27,35 @@
             <children>
                 <AnchorPane layoutX="5.0" prefHeight="436.0" prefWidth="800.0">
                     <children>
-                        <Label layoutX="14.0" layoutY="15.0" text="Gerenciar Empréstimos">
+                        <Label layoutX="41.0" layoutY="15.0" text="Gerenciar Empréstimos">
                             <font>
                                 <Font name="System Bold" size="34.0" />
                             </font>
                         </Label>
-                        <TableView fx:id="emprestimos" layoutX="7.0" layoutY="65.0" prefHeight="308.0" prefWidth="786.0">
+                        <Label fx:id="ExcecaoNenhumLivroSelecionado" layoutX="153.0" layoutY="395.0" prefHeight="35.0" prefWidth="441.0" textAlignment="CENTER">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Label>
+                        <TableView fx:id="tableView" layoutX="41.0" layoutY="71.0" prefHeight="287.0" prefWidth="650.0">
                             <columns>
-                                <TableColumn fx:id="usuarioColumn" prefWidth="96.0" text="Cliente" />
-                                <TableColumn fx:id="livroColumn" prefWidth="131.0" text="Livro" />
-                                <TableColumn fx:id="dataEmprestimoColumn" prefWidth="153.0" text="Data do empréstimo" />
-                                <TableColumn fx:id="dataDevolucaoColumn" prefWidth="173.0" text="Data de devolução" />
-                                <TableColumn fx:id="emprestadoColumn" prefWidth="129.0" text="Empréstimo ativo" />
-                        <TableColumn fx:id="dataLimiteColumn" prefWidth="103.0" text="Data limite" />
+                                <TableColumn fx:id="emprestimoColumn" prefWidth="307.0" text="Empréstimo" />
+                                <TableColumn fx:id="multaColumn" prefWidth="82.0" text="Multa" />
+                                <TableColumn fx:id="pagoColumn" prefWidth="123.0" text="Status do Pagamento" />
+                                <TableColumn fx:id="dataColumn" prefWidth="137.0" text="Data do Pagamento" />
                             </columns>
                         </TableView>
-                        <Button fx:id="voltarTelaInicialAdmin1" layoutX="25.0" layoutY="391.0" mnemonicParsing="false" onAction="#onvoltarTelaInicialAdmin1Click" prefHeight="31.0" prefWidth="75.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
+                        <Button fx:id="voltarTelaInicioCliente" layoutX="41.0" layoutY="378.0" mnemonicParsing="false" onAction="#onvoltarTelaInicioClienteClick" prefHeight="35.0" prefWidth="79.0" style="-fx-background-color: purple;" text="Voltar" textFill="WHITE">
                             <font>
-                                <Font size="15.0" />
+                                <Font size="16.0" />
+                            </font>
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Button>
+                        <Button fx:id="pagarMulta" layoutX="140.0" layoutY="378.0" mnemonicParsing="false" onAction="#onPagarMultaClick" prefHeight="35.0" prefWidth="147.0" style="-fx-background-color: purple;" text="Zerar Multa" textFill="WHITE">
+                            <font>
+                                <Font size="16.0" />
                             </font>
                             <cursor>
                                 <Cursor fx:constant="HAND" />
